@@ -1,7 +1,7 @@
 package ch.zhaw.techland.model.voucher;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 import ch.zhaw.techland.model.Device;
 import ch.zhaw.techland.model.DeviceType;
 
@@ -15,13 +15,11 @@ public class TwoForOneVoucher implements Voucher {
 
     @Override
     public double getDiscount(List<Device> devices) {
-        var filteredDevices = devices.stream().filter(p -> this.deviceType.equals(p.getDeviceType()))
-                .collect(Collectors.toList());
+        var filteredDevices = devices.stream().filter(p -> this.deviceType.equals(p.getDeviceType())).toList();
         var sum = filteredDevices.stream().mapToDouble(p -> p.getMietpreis()).sum();
         if (filteredDevices.size() <= 1) {
             return 0;
         }
         return sum / 2;
     }
-
 }
